commiiting after first version

--- a/index.html
+++ b/index.html
@@ -7,6 +7,23 @@
   </head>
   <body>
     <h1>Discover hidden places in the world around you</h1>
-    <a href="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/index.html">Download Excursion (Coming soon!)</a>
+       <div id="link1">
+          <a  href="./index.html">Download Excursion (Coming soon!)</a>
+       </div><br /><br><br>
+       <div>
+         <video src="resources/videos/excursion.mp4" width="400" height="600" controls>Video not supported</video>
+       </div>
+     </div>
+      <h1 id="h2">Your personal travel guide</h1>
+      <p id="p1">Excursion remembers places you like, and recommends new points of interest around you.</p>
+    </div><br></br>
+
+        <p><img src="resources/images/camp.jpg" /></p><br></br>
+        <p><img src="resources/images/phone.png" /></p>
+        <h1 id="h3">Coming Soon for iPhone and Android</h1><br>
+        <div id="link1">
+           <a  href="./index.html">Download Excursion (Coming soon!)</a>
+        </div><br></br>
+        <p id="copyright">© Excursion</p>
   </body>
 </html>
